[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
tokio = { version = "1.27.0", features = ["sync"] }
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Document",
    "Element",
    "console",
    "HtmlElement",
    "HtmlLiElement",
    "HtmlHeadingElement",
]
