[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[features]
dom = ["web-sys", "wasm-bindgen"]
dom-ssr = []

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true }
tokio = { version = "1.27.0", features = ["sync"] }
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.70"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.61"
optional = true
features = [
    "Window",
    "Document",
    "Element",
    "console",
    "HtmlElement",
    "HtmlLiElement",
    "HtmlHeadingElement",
    "Text",
]
