[package]
name = "wiki-dom"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
flow = { path = "../flow", features = ["dom"] }
wiki = { path = "../wiki", features = ["dom"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Document",
]
